<resources>
    <string name="app_name">PhoneHelper</string>

    <!-- Common -->
    <string name="done">Tamam</string>
    <string name="generic_error">Bir hata oluştu. Lütfen daha sonra tekrar dene.</string>
    <string name="text_no_internet">İnternet bağlantın yok.</string>
    <string name="timeout_message">Beklenilen sürede cevap alamadık, lütfen sayfayı yenileyin.</string>
    <string name="title_today_usage">Bugünkü Kullanım Süreniz</string>
    <string name="menu_main_title">Ana Sayfa</string>
    <string name="menu_reports_title">Raporlar</string>
    <string name="menu_profile_title">Profil</string>
    <string name="title_grant_permission">İzin Ver</string>
    <string name="title_cancel">Vazgeç</string>

    <!-- Profile -->
    <string name="title_daily_average_usage">Günlük Ortalama Kullanım:</string>
    <string name="title_weekly_average_usage">Haftalık Ortalama Kullanım:</string>
    <string name="title_weekdays_average_usage">Hafta içi Ortalama Kullanım:</string>
    <string name="title_weekend_average_usage">Hafta sonu Ortalama Kullanım:</string>
    <string name="title_opened_lock">Bugünkü Kilit Açma:</string>
    <string name="title_username">Kullanıcı Adı</string>
    <string name="text_input_username">Kullanıcı Adını Giriniz:</string>
    <string name="text_warning_username_empty">Kullanıcı adı boş bırakılamaz!</string>
    <string name="title_information">Bilgi</string>
    <string name="text_usage_permission_warning">Kullanım erişim iznini açmadığın için PhoneHelper düzgün çalışmayacak ve istatistiklerini gösteremeyecek. İstediğin zaman kullanım ayarlarından izin verebilirsin.</string>
    <string name="text_usage_permission">PhoneHelper, istatistiklerini gösterebilmek için kullanım erişim iznine ihtiyaç duyar \n Ayarlardan PhoneHelper erişim iznini açmalısın</string>
    <string name="title_usage_hour_minute">%1d saat %2d dakika</string>
    <string name="title_cases">Vakalar</string>
    <string name="text_active_cases">Aktif: %1d</string>
    <string name="text_critical_cases">Kritik: %1d</string>
    <string name="text_total_cases">Toplam: %1d</string>


</resources>